refactor(server): replace fixed thread pool with virtual threads